add_subdirectory(asio_timer)
add_subdirectory(background_task)
add_subdirectory(async)
add_subdirectory(error_handling)
add_subdirectory(single_thread_approach)
add_subdirectory(multiple_threads_single_io)
add_subdirectory(parallel_work)
add_subdirectory(echo_server)
add_subdirectory(buffers)
add_subdirectory(stream_buffers)
add_subdirectory(signals)
add_subdirectory(cancelation)
add_subdirectory(signal_slot_cancel)
add_subdirectory(strands)
add_subdirectory(check_version)
add_subdirectory(echo_server_coroutines)
